ProjectBulletinBoard is not ready.

--- a/ProjectBulletinBoard/templates/advertisement.html
+++ b/ProjectBulletinBoard/templates/advertisement.html
@@ -6,7 +6,7 @@
     <title>Объявление</title>
 </head>
 <body>
-    <button><a href="http://127.0.0.1:8000/advertisements/">Объявления</a></button>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Объявление</h1>
     <table>
         <tr>
