--- a/ProjectBulletinBoard/templates/get_code_for_confirm_registration_error.html
+++ b/ProjectBulletinBoard/templates/get_code_for_confirm_registration_error.html
@@ -6,6 +6,7 @@
     <title>Ошибка</title>
 </head>
 <body>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Ошибка получения одноразового кода для подтверждения регистрации на почту</h1>
     <p>Возможные причины:</p>
     <p>1. Неверное имя пользователя и/или неверный пароль.</p>
