--- a/ProjectBulletinBoard/templates/login_with_code.html
+++ b/ProjectBulletinBoard/templates/login_with_code.html
@@ -6,6 +6,7 @@
     <title>Второй этап входа (по одноразовому коду)</title>
 </head>
 <body>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Второй этап входа (по одноразовому коду)</h1>
     <form action="http://127.0.0.1:8000/login_with_code/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
