--- a/ProjectBulletinBoard/templates/login_with_code_error.html
+++ b/ProjectBulletinBoard/templates/login_with_code_error.html
@@ -6,6 +6,7 @@
     <title>Ошибка</title>
 </head>
 <body>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Ошибка второго этапа входа (по одноразовому коду)</h1>
     <p>Возможные причины:</p>
     <p>1. Неверное имя пользователя и/или неверный/просроченный одноразовый код.</p>
