--- a/ProjectBulletinBoard/templates/your_advertisement.html
+++ b/ProjectBulletinBoard/templates/your_advertisement.html
@@ -6,7 +6,7 @@
     <title>Ваше объявление</title>
 </head>
 <body>
-    <button><a href="http://127.0.0.1:8000/your_advertisements/">Ваши объявления</a></button>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Ваше объявление</h1>
     <table>
         <tr>
