--- a/ProjectBulletinBoard/templates/advertisements_create.html
+++ b/ProjectBulletinBoard/templates/advertisements_create.html
@@ -6,6 +6,7 @@
     <title>Создание объявления</title>
 </head>
 <body>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Создание объявления</h1>
     <form action="http://127.0.0.1:8000/advertisements/create/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
