--- a/ProjectBulletinBoard/templates/confirm_registration.html
+++ b/ProjectBulletinBoard/templates/confirm_registration.html
@@ -6,6 +6,7 @@
     <title>Подтверждение регистрации</title>
 </head>
 <body>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Подтверждение регистрации</h1>
     <form action="http://127.0.0.1:8000/confirm_registration/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
