--- a/ProjectBulletinBoard/templates/logout.html
+++ b/ProjectBulletinBoard/templates/logout.html
@@ -6,6 +6,7 @@
     <title>Выход</title>
 </head>
 <body>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Выход</h1>
     <form action="http://127.0.0.1:8000/logout/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
