--- a/ProjectBulletinBoard/templates/signup.html
+++ b/ProjectBulletinBoard/templates/signup.html
@@ -6,6 +6,7 @@
     <title>Регистрация</title>
 </head>
 <body>
+    <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Регистрация</h1>
     <form action="http://127.0.0.1:8000/signup/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
