ProjectBulletinBoard is not ready.

--- a/ProjectBulletinBoard/templates/key_page.html
+++ b/ProjectBulletinBoard/templates/key_page.html
@@ -16,5 +16,7 @@
     <button><a href="http://127.0.0.1:8000/advertisements/">Объявления</a></button><br>
     <button><a href="http://127.0.0.1:8000/advertisements/create">Создать объявление</a></button><br>
     <button><a href="http://127.0.0.1:8000/your_advertisements/">Ваши объявления</a></button><br>
+    <button><a href="http://127.0.0.1:8000/advertisements/your_replies/">Ваши отклики на объявления</a></button><br>
+    <button><a href="http://127.0.0.1:8000/your_advertisements/replies">Отклики на Ваши объявления</a></button><br>
 </body>
 </html>
