--- a/ProjectBulletinBoard/templates/reply_on_ad.html
+++ b/ProjectBulletinBoard/templates/reply_on_ad.html
@@ -19,7 +19,7 @@
         </tr>
         <tr>
             <td>{{ reply.advertisement.title }}</td>
-            <td>{{ reply.text|truncatewords:20 }}</td>
+            <td>{{ reply.text }}</td>
             <td>{{ reply.is_accepted }}</td>
             <td>{{ reply.create_datetime }}</td>
             <td>{{ reply.last_change_datetime }}</td>
