--- a/ProjectBulletinBoard/templates/reply_on_your_ad.html
+++ b/ProjectBulletinBoard/templates/reply_on_your_ad.html
@@ -19,11 +19,12 @@
         </tr>
         <tr>
             <td>{{ reply.advertisement.title }}</td>
-            <td>{{ reply.text|truncatewords:20 }}</td>
+            <td>{{ reply.text }}</td>
             <td>{{ reply.is_accepted }}</td>
             <td>{{ reply.create_datetime }}</td>
             <td>{{ reply.last_change_datetime }}</td>
             <td>{{ reply.user.username }}</td>
+            <td><button><a href="http://127.0.0.1:8000/your_advertisements/{{ reply.advertisement.pk }}/replies/{{ reply.pk }}/accept/">Принять</a></button></td>
         </tr>
     </table>
 </body>
