--- a/ProjectBulletinBoard/templates/replies_accept.html
+++ b/ProjectBulletinBoard/templates/replies_accept.html
@@ -8,7 +8,7 @@
 <body>
     <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Принятие отклика</h1>
-    <form action="http://127.0.0.1:8000/advertisements/{{ advertisement.pk }}/your_replies/{{ reply.pk }}/accept/" method="POST" enctype="multipart/form-data">
+    <form action="http://127.0.0.1:8000/your_advertisements/{{ advertisement.pk }}/replies/{{ reply.pk }}/accept/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <input type="submit" value="Принять"><br>
     </form>
