--- a/ProjectBulletinBoard/templates/replies_on_your_ads.html
+++ b/ProjectBulletinBoard/templates/replies_on_your_ads.html
@@ -33,5 +33,36 @@
     {% else %}
     <h2>Откликов нет.</h2>
     {% endif %}
+<form method="get">
+    {{ filter.form.as_p }}
+    <input type="submit" value="Найти"/>
+</form>
+{% if filter.qs %}
+<table>
+    <tr>
+        <td>Объявление</td>
+        <td>Текст</td>
+        <td>Статус</td>
+        <td>Дата создания</td>
+        <td>Дата изменения</td>
+        <td>Откликнувшийся</td>
+    </tr>
+    {% for reply in replies %}
+    <tr>
+        <td>{{ reply.advertisement.title }}</td>
+        <td>{{ reply.text|truncatewords:20 }}</td>
+        <td>{{ reply.is_accepted }}</td>
+        <td>{{ reply.create_datetime }}</td>
+        <td>{{ reply.last_change_datetime }}</td>
+        <td>{{ reply.user.username }}</td>
+        <td>
+            <button><a href="http://127.0.0.1:8000/your_advertisements/{{ reply.advertisement.pk }}/replies/{{ reply.pk }}">Детальный просмотр</a></button>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+{% else %}
+<h2>Откликов нет.</h2>
+{% endif %}
 </body>
 </html>
