--- a/ProjectBulletinBoard/templates/your_advertisement.html
+++ b/ProjectBulletinBoard/templates/your_advertisement.html
@@ -17,13 +17,13 @@
             <td>Дата изменения</td>
         </tr>
         <tr>
-            <td>{{ your_advertisement.title }}</td>
-            <td>{{ your_advertisement.category.name }}</td>
-            <td>{{ your_advertisement.content }}</td>
-            <td>{{ your_advertisement.create_datetime|date:"d.m.Y H:i" }}</td>
-            <td>{{ your_advertisement.last_change_datetime|date:"d.m.Y H:i" }}</td>
-            <td><button><a href="http://127.0.0.1:8000/advertisements/{{ advertisement.pk }}/update/">Изменить</a></button></td>
-            <td><button><a href="http://127.0.0.1:8000/advertisements/{{ advertisement.pk }}/delete/">Удалить</a></button></td>
+            <td>{{ advertisement.title }}</td>
+            <td>{{ advertisement.category.name }}</td>
+            <td>{{ advertisement.content }}</td>
+            <td>{{ advertisement.create_datetime|date:"d.m.Y H:i" }}</td>
+            <td>{{ advertisement.last_change_datetime|date:"d.m.Y H:i" }}</td>
+            <td><button><a href="http://127.0.0.1:8000/your_advertisements/{{ advertisement.pk }}/update/">Изменить</a></button></td>
+            <td><button><a href="http://127.0.0.1:8000/your_advertisements/{{ advertisement.pk }}/delete/">Удалить</a></button></td>
         </tr>
     </table>
 </body>
