--- a/ProjectBulletinBoard/templates/your_advertisements.html
+++ b/ProjectBulletinBoard/templates/your_advertisements.html
@@ -24,9 +24,9 @@
             <td>{{ advertisement.content|truncatewords:20 }}</td>
             <td>{{ advertisement.create_datetime }}</td>
             <td>{{ advertisement.last_change_datetime }}</td>
-            <td><button><a href="http://127.0.0.1:8000/advertisements/{{ advertisement.pk }}/">Детальный просмотр</a></button></td>
-            <td><button><a href="http://127.0.0.1:8000/advertisements/{{ advertisement.pk }}/update/">Изменить</a></button></td>
-            <td><button><a href="http://127.0.0.1:8000/advertisements/{{ advertisement.pk }}/delete/">Удалить</a></button></td>
+            <td><button><a href="http://127.0.0.1:8000/your_advertisements/{{ advertisement.pk }}/">Детальный просмотр</a></button></td>
+            <td><button><a href="http://127.0.0.1:8000/your_advertisements/{{ advertisement.pk }}/update/">Изменить</a></button></td>
+            <td><button><a href="http://127.0.0.1:8000/your_advertisements/{{ advertisement.pk }}/delete/">Удалить</a></button></td>
         </tr>
         {% endfor %}
     </table>
