--- a/ProjectBulletinBoard/templates/your_advertisements_update.html
+++ b/ProjectBulletinBoard/templates/your_advertisements_update.html
@@ -8,7 +8,7 @@
 <body>
     <button><a href="http://127.0.0.1:8000/">Главная страница</a></button>
     <h1>Изменение объявления</h1>
-    <form action="http://127.0.0.1:8000/advertisements/{{ advertisement.pk }}/update/" method="POST" enctype="multipart/form-data">
+    <form action="http://127.0.0.1:8000/your_advertisements/{{ advertisement.pk }}/update/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <label for="title">Заголовок</label>
         <input type="text" name="title" value="{{ advertisement.title }}" required><br>
